--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2002,11 +2002,15 @@
 "password_change_forgot_password_required_error" = "لتغيير كلمة المرور الخاصة بك ، يجب عليك أولاً تسجيل الخروج من حسابك واتباع إرشادات \"نسيت كلمة المرور\" على شاشة تسجيل الدخول.";
 "kvkk_toggle_desc" = "";
 "kvkk_toggle_text" = "";
-"security_popup_warning_header" = "";
-"security_popup_warning_body1" = "";
-"security_popup_warning_body2" = "";
-"security_popup_warning_footer" = "";
+"security_popup_warning_header" = "تم إدخال معلومات غير صحيحة";
+"security_popup_warning_body1" = "تم حفظ سؤال الأمان بنجاح ، وتم تلقي الخطأ التالي للبريد الإلكتروني المخصص للطوارئ:";
+"security_popup_warning_body2" = "تم حفظ البريد الإلكتروني الخاص بالاسترداد بنجاح ، وقد حدث الخطأ التالي لسؤال الأمان:";
+"security_popup_warning_footer" = "يمكنك إعادة إدخال البريد الإلكتروني الخاص بالاسترداد عبر الإعدادات -> تفاصيل الحساب -> ملف التعريف الخاص بي.";
 "kvkk_firms_link" = "";
 "kvkk_commercial_info_link" = "";
 "apple_login_user_exists_body" = "";
 "settings_apple_password_required" = "";
+"apple_login_user_exists_body" = "يوجد حساب lifebox مسجل على عنوان البريد الإلكتروني%@. لتوصيل طريقة تسجيل الدخول باستخدام Apple ID بحساب lifebox موجود ، يجب عليك أولاً إدخال كلمة مرور lifebox الخاصة بك.";
+"settings_apple_password_required" = "لتعطيل تسجيل الدخول إلى Apple ID ، تحتاج إلى تعيين كلمة مرور lifebox.";
+"apple_login_show_mail_warning" = "";
+"ETK_KVKK_Izin_Politikası" = "";
