--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1990,11 +1990,15 @@
 "password_change_forgot_password_required_error" = "Pentru a vă schimba parola, trebuie mai întâi să vă deconectați din cont și să urmați instrucțiunile „Parola Uitată” de pe ecranul de conectare.";
 "kvkk_toggle_desc" = "";
 "kvkk_toggle_text" = "";
-"security_popup_warning_header" = "";
-"security_popup_warning_body1" = "";
-"security_popup_warning_body2" = "";
-"security_popup_warning_footer" = "";
+"security_popup_warning_header" = "Este İntrodusă O İnformație İncorectă";
+"security_popup_warning_body1" = "Întrebarea de securitate a fost salvată cu succes, a apărut următoarea eroare pentru e-mailul de recuperare:";
+"security_popup_warning_body2" = "E-mailul de recuperare a fost salvat cu succes, a apărut următoarea eroare pentru întrebarea de securitate:";
+"security_popup_warning_footer" = "Puteți reintroduce adresa de e-mail de recuperare prin Setări -> Detalii Cont -> Profilul Meu.";
 "kvkk_firms_link" = "";
 "kvkk_commercial_info_link" = "";
 "apple_login_user_exists_body" = "";
 "settings_apple_password_required" = "";
+"apple_login_user_exists_body" = "Există un cont lifebox înregistrat la adresa de e-mail %@. Pentru a conecta metoda Conectați-vă cu Apple ID la un cont lifebox existent, trebuie mai întâi să introduceți parola lifebox.";
+"settings_apple_password_required" = "Pentru a dezactiva autentificarea Apple ID, trebuie să setați parola lifebox.";
+"apple_login_show_mail_warning" = "";
+"ETK_KVKK_Izin_Politikası" = "";
