--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2004,11 +2004,15 @@
 "password_change_forgot_password_required_error" = "Чтобы изменить свой пароль, вы должны сначала выйти из своей учетной записи и следовать инструкциям «Забыл Пароль» на экране входа в систему.";
 "kvkk_toggle_desc" = "";
 "kvkk_toggle_text" = "";
-"security_popup_warning_header" = "";
-"security_popup_warning_body1" = "";
-"security_popup_warning_body2" = "";
-"security_popup_warning_footer" = "";
+"security_popup_warning_header" = "Введена Неверная Информация";
+"security_popup_warning_body1" = "Контрольный вопрос успешно сохранен, произошла следующая ошибка электронного адреса восстановления:";
+"security_popup_warning_body2" = "Электронный адрес для восстановления успешно сохранен, произошла следующая ошибка контрольного вопроса:";
+"security_popup_warning_footer" = "Вы можете повторно ввести свой резервный адрес электронной почты через Настройки -> Данные Учетной Записи -> Мой Профиль.";
 "kvkk_firms_link" = "";
 "kvkk_commercial_info_link" = "";
 "apple_login_user_exists_body" = "";
 "settings_apple_password_required" = "";
+"apple_login_user_exists_body" = "Имеется учетная запись lifebox, зарегистрированная на адрес электронной почты %@. Для подключения метода «Вход с Apple ID» к существующей учетной записи lifebox, вы должны сначала ввести свой пароль lifebox.";
+"settings_apple_password_required" = "Для отключения входа через Apple ID необходимо установить пароль lifebox.";
+"apple_login_show_mail_warning" = "";
+"ETK_KVKK_Izin_Politikası" = "";
