--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2033,11 +2033,15 @@
 "password_change_forgot_password_required_error" = "Për të ndryshuar fjalëkalimin, fillimisht duhet të dilni nga llogaria juaj dhe të ndiqni udhëzimet \"Harrova Fjalëkalimin\" në ekranin e hyrjes.";
 "kvkk_toggle_desc" = "";
 "kvkk_toggle_text" = "";
-"security_popup_warning_header" = "";
-"security_popup_warning_body1" = "";
-"security_popup_warning_body2" = "";
-"security_popup_warning_footer" = "";
+"security_popup_warning_header" = "Është Futur Një İnformacion İ Pasaktë";
+"security_popup_warning_body1" = "Pyetja e sigurisë është ruajtur me sukses, ka ndodhur gabimi i mëposhtëm për emailin e rikuperimit:";
+"security_popup_warning_body2" = "E-mail-i i rikuperimit u ruajt me sukses, ka ndodhur gabimi i mëposhtëm për pyetjen e sigurisë:";
+"security_popup_warning_footer" = "Mund të rifusni emailin tuaj të rikuperimit përmes Cilësimeve -> Detajet e Llogarisë -> Profili İm.";
 "kvkk_firms_link" = "";
 "kvkk_commercial_info_link" = "";
 "apple_login_user_exists_body" = "";
 "settings_apple_password_required" = "";
+"apple_login_user_exists_body" = "Gjendet një llogari ekzistuese e regjistruar me %@ e-mail, për të lidhur Apple Login ID me llogarinë tuaj ekzistuese të lifebox, fillimisht duhet të vendosni fjalëkalimin tuaj të lifebox.";
+"settings_apple_password_required" = "Për të çaktivizuar hyrjen në Apple ID, së pari duhet të vendosni një fjalëkalim të lifebox.";
+"apple_login_show_mail_warning" = "";
+"ETK_KVKK_Izin_Politikası" = "";
