--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2033,6 +2033,7 @@
 "settings_change_password_apple_warning" = "In order to change your password, you must login to your lifebox account with your Apple ID.";
 "settings_change_password_apple_google_warning" = "In order to change your password, you must login to your lifebox account with your Google ID or Apple ID.";
 "settings_googe_apple_set_password" = "";
+"settings_googe_apple_set_password" = "Set lifebox Password";
 "settings_google_apple_mail_match_error" = "To connect your account to lifebox, your e-mail must be the same on each platform.";
 "googe_apple_login_invalid_token" = "Invalid login attempt, please check your login credential and try again.";
 "settings_google_apple_empty_mail_error" = "You have to add an email address to your account.";
@@ -2048,3 +2049,14 @@
 "kvkk_commercial_info_link" = "";
 "apple_login_user_exists_body" = "";
 "settings_apple_password_required" = "";
+"kvkk_toggle_text" = "I hereby give my consent to allow Lifecell Bulut Çözümleri A.Ş. to process my personal data and share them with the parties listed in the %@ .";
+"security_popup_warning_header" = "An Incorrect Information Is Entered";
+"security_popup_warning_body1" = "The security question is successfully saved, the following error for the recovery e-mail has occurred:";
+"security_popup_warning_body2" = "The recovery e-mail is successfully saved, the following error for the security question has occurred:";
+"security_popup_warning_footer" = "You can re-enter your recovery e-mail via Settings -> Account Details -> My Profile.";
+"kvkk_firms_link" = "";
+"kvkk_commercial_info_link" = "";
+"apple_login_user_exists_body" = "An existing registered account is found with %@ e-mail, to connect Apple Login ID with your existing lifebox account you must first enter your lifebox password.";
+"settings_apple_password_required" = "In order to turn off the Apple ID Login, you must set a lifebox password first.";
+"apple_login_show_mail_warning" = "You need to allow your e-mail address to be shared with lifebox in order to login with your Apple ID. Please click the button below to be directed to Settings page, follow the instructions to remove the lifebox account under Apple ID > Password & Security > Apps Using Apple ID and follow the steps again to login with your Apple ID.";
+"ETK_KVKK_Izin_Politikası" = "Permission Policy";
