LB-1195 Kvkk texts

--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2293,18 +2293,15 @@ Please check I have understood the intended command here*/
 "settings_google_apple_empty_mail_error" = "Vous devez ajouter une adresse e-mail à votre compte.";
 "password_change_external_auth_required_error" = "Pour modifier votre mot de passe, vous pouvez soit vous connecter à votre compte lifebox à l'aide de votre identifiant Google/identifiant Apple, soit suivre les instructions relatives au mot de passe oublié sur l'écran de connexion.";
 "password_change_forgot_password_required_error" = "Pour changer votre mot de passe, vous devez d'abord vous déconnecter de votre compte et suivre les instructions \"Mot de passe oublié\" sur l'écran de connexion.";
-"kvkk_toggle_desc" = "";
-"kvkk_toggle_text" = "";
+"kvkk_toggle_desc" = "Consentement au Traitement/Partage des Données";
+"kvkk_toggle_text" = "Par la présente, je donne mon consentement pour permettre à Lifecell Bulut Çözümleri A.Ş. de traiter mes données personnelles et de les partager avec les parties énumérées dans le %@.";
 "security_popup_warning_header" = "Une İnformation İncorrecte Est Entrée";
 "security_popup_warning_body1" = "La question de sécurité est enregistrée ave succès, l'erreur suivante pour l'e-mail de récupération s'est produite :";
 "security_popup_warning_body2" = "L'e-mail de récupération est enregistré avec succès, l'erreur suivante pour la question de sécurité s'est produite :";
 "security_popup_warning_footer" = "Vous pouvez ressaisir votre adresse e-mail de récupération via Paramètres -> Détails du Compte -> Mon Profil.";
 "kvkk_firms_link" = "";
 "kvkk_commercial_info_link" = "";
-"apple_login_user_exists_body" = "";
-"settings_apple_password_required" = "";
-"apple_login_show_mail_warning" = "";
 "apple_login_user_exists_body" = "Il existe un compte lifebox enregistré à l'adresse e-mail %@. Pour connecter la méthode Connexion Avec Apple ID à un compte lifebox existant, vous devez d'abord entrer votre mot de passe lifebox.";
 "settings_apple_password_required" = "Pour désactiver la connexion Apple ID, vous devez définir le mot de passe lifebox.";
-"apple_login_show_mail_warning" = "";
-"ETK_KVKK_Izin_Politikası" = "";
+"apple_login_show_mail_warning" = "Vous devez autoriser le partage de votre adresse e-mail avec lifebox afin de vous connecter avec votre identifiant Apple. Veuillez cliquer sur le bouton ci-dessous pour être dirigé vers la page Paramètres, suivez les instructions pour supprimer le compte lifebox sous Identifiant Apple > Mot de passe et sécurité > Applications utilisant l'identifiant Apple et suivez à nouveau les étapes pour vous connecter avec votre identifiant Apple.";
+"ETK_KVKK_Izin_Politikası" = "Politique d'autorisation";
