--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1988,18 +1988,15 @@
 "settings_google_apple_empty_mail_error" = "Trebuie să adăugați o adresă de e-mail în contul dvs.";
 "password_change_external_auth_required_error" = "Pentru a vă schimba parola, puteți fie să vă conectați la contul lifebox folosind ID-ul Google/ID-ul Apple, fie să urmați instrucțiunile privind parola uitată de pe ecranul de conectare.";
 "password_change_forgot_password_required_error" = "Pentru a vă schimba parola, trebuie mai întâi să vă deconectați din cont și să urmați instrucțiunile „Parola Uitată” de pe ecranul de conectare.";
-"kvkk_toggle_desc" = "";
-"kvkk_toggle_text" = "";
+"kvkk_toggle_desc" = "Prelucrarea Datelor/Consimțământul de Partajare";
+"kvkk_toggle_text" = "Prin prezenta îmi dau consimțământul pentru a permite Lifecell Bulut Çözümleri A.Ș. să prelucreze datele mele personale și să le partajeze părților enumerate în %@.";
 "security_popup_warning_header" = "Este İntrodusă O İnformație İncorectă";
 "security_popup_warning_body1" = "Întrebarea de securitate a fost salvată cu succes, a apărut următoarea eroare pentru e-mailul de recuperare:";
 "security_popup_warning_body2" = "E-mailul de recuperare a fost salvat cu succes, a apărut următoarea eroare pentru întrebarea de securitate:";
 "security_popup_warning_footer" = "Puteți reintroduce adresa de e-mail de recuperare prin Setări -> Detalii Cont -> Profilul Meu.";
 "kvkk_firms_link" = "";
 "kvkk_commercial_info_link" = "";
-"apple_login_user_exists_body" = "";
-"settings_apple_password_required" = "";
-"apple_login_show_mail_warning" = "";
 "apple_login_user_exists_body" = "Există un cont lifebox înregistrat la adresa de e-mail %@. Pentru a conecta metoda Conectați-vă cu Apple ID la un cont lifebox existent, trebuie mai întâi să introduceți parola lifebox.";
 "settings_apple_password_required" = "Pentru a dezactiva autentificarea Apple ID, trebuie să setați parola lifebox.";
-"apple_login_show_mail_warning" = "";
-"ETK_KVKK_Izin_Politikası" = "";
+"apple_login_show_mail_warning" = "Trebuie să permiteți ca adresa dvs. de e-mail să fie partajată cu lifebox pentru a vă conecta cu ID-ul Apple. Vă rugăm să faceți clic pe butonul pentru a fi direcționat către pagina Setări, urmați instrucțiunile pentru a elimina contul Lifebox din ID Apple > Parolă și securitate > Aplicații care folosesc ID-ul Apple și urmați din nou pașii pentru a vă autentifica cu ID-ul Apple.";
+"ETK_KVKK_Izin_Politikası" = "Politica de Permisiuni";
