--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2000,18 +2000,15 @@
 "settings_google_apple_empty_mail_error" = "يجب عليك إضافة عنوان بريد إلكتروني إلى حسابك.";
 "password_change_external_auth_required_error" = "لتغيير كلمة المرور الخاصة بك ، يمكنك إما تسجيل الدخول إلى حساب lifebox الخاص بك باستخدام معرف Google / معرف Apple الخاص بك أو اتباع تعليمات كلمة المرور المنسية على شاشة تسجيل الدخول.";
 "password_change_forgot_password_required_error" = "لتغيير كلمة المرور الخاصة بك ، يجب عليك أولاً تسجيل الخروج من حسابك واتباع إرشادات \"نسيت كلمة المرور\" على شاشة تسجيل الدخول.";
-"kvkk_toggle_desc" = "";
-"kvkk_toggle_text" = "";
+"kvkk_toggle_desc" = "الموافقة على معالجة / مشاركة البيانات";
+"kvkk_toggle_text" = "أمنح بموجب هذا موافقتي للسماح لـ .Lifecell Bulut Çözümleri A.Ş بمعالجة بياناتي الشخصية ومشاركتها مع الأطراف المدرجة في%@.";
 "security_popup_warning_header" = "تم إدخال معلومات غير صحيحة";
 "security_popup_warning_body1" = "تم حفظ سؤال الأمان بنجاح ، وتم تلقي الخطأ التالي للبريد الإلكتروني المخصص للطوارئ:";
 "security_popup_warning_body2" = "تم حفظ البريد الإلكتروني الخاص بالاسترداد بنجاح ، وقد حدث الخطأ التالي لسؤال الأمان:";
 "security_popup_warning_footer" = "يمكنك إعادة إدخال البريد الإلكتروني الخاص بالاسترداد عبر الإعدادات -> تفاصيل الحساب -> ملف التعريف الخاص بي.";
 "kvkk_firms_link" = "";
 "kvkk_commercial_info_link" = "";
-"apple_login_user_exists_body" = "";
-"settings_apple_password_required" = "";
-"apple_login_show_mail_warning" = "";
 "apple_login_user_exists_body" = "يوجد حساب lifebox مسجل على عنوان البريد الإلكتروني%@. لتوصيل طريقة تسجيل الدخول باستخدام Apple ID بحساب lifebox موجود ، يجب عليك أولاً إدخال كلمة مرور lifebox الخاصة بك.";
 "settings_apple_password_required" = "لتعطيل تسجيل الدخول إلى Apple ID ، تحتاج إلى تعيين كلمة مرور lifebox.";
-"apple_login_show_mail_warning" = "";
-"ETK_KVKK_Izin_Politikası" = "";
+"apple_login_show_mail_warning" = "تحتاج إلى السماح بمشاركة عنوان بريدك الإلكتروني مع lifebox لتسجيل الدخول باستخدام Apple ID الخاص بك. يرجى النقر فوق الزر ليتم توجيهك إلى صفحة الإعدادات ، واتبع الإرشادات لإزالة حساب lifebox ضمن Apple ID> كلمة المرور والأمان> التطبيقات التي تستخدم معرف Apple واتبع الخطوات مرة أخرى لتسجيل الدخول باستخدام Apple ID.";
+"ETK_KVKK_Izin_Politikası" = "نهج الأذونات";
