--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1988,18 +1988,15 @@
 "settings_google_apple_empty_mail_error" = "Sie müssen Ihrem Konto eine E-Mail-Adresse hinzufügen.";
 "password_change_external_auth_required_error" = "Um Ihr Passwort zu ändern, können Sie sich entweder mit Ihrer Google-ID/Apple-ID bei Ihrem lifebox-Konto anmelden oder den Anweisungen „Passwort vergessen“ auf dem Anmeldebildschirm folgen.";
 "password_change_forgot_password_required_error" = "Um Ihr Passwort zu ändern, müssen Sie sich zuerst von Ihrem Konto abmelden und den Anweisungen Passwort Vergessen auf dem Anmeldebildschirm folgen.";
-"kvkk_toggle_desc" = "";
-"kvkk_toggle_text" = "";
+"kvkk_toggle_desc" = "Zustimmung zur Datenverarbeitung/Weitergabe";
+"kvkk_toggle_text" = "Hiermit erkläre ich mich damit einverstanden, dass Lifecell Bulut Çözümleri A.Ş. meine personenbezogenen Daten verarbeitet und sie mit den in %@ aufgeführten Parteien teilt.";
 "security_popup_warning_header" = "Eine Falsche Information Wurde Eingegeben";
 "security_popup_warning_body1" = "Die Sicherheitsfrage wurde erfolgreich gespeichert, folgender Fehler bei der Recovery-E-Mail ist aufgetreten:";
 "security_popup_warning_body2" = "Die Wiederherstellungs-E-Mail wurde erfolgreich gespeichert, bei der Sicherheitsfrage ist folgender Fehler aufgetreten:";
 "security_popup_warning_footer" = "Sie können Ihre Wiederherstellungs-E-Mail über Einstellungen -> Kontodetails -> Mein Profil erneut eingeben.";
 "kvkk_firms_link" = "";
 "kvkk_commercial_info_link" = "";
-"apple_login_user_exists_body" = "";
-"settings_apple_password_required" = "";
-"apple_login_show_mail_warning" = "";
 "apple_login_user_exists_body" = "Unter der E-Mail-Adresse %@ ist ein lifebox-Konto registriert. Um die Methode Mit Apple ID Anmelden mit einem bestehenden lifebox-Konto zu verbinden, müssen Sie zunächst Ihr lifebox-Passwort eingeben.";
 "settings_apple_password_required" = "Um die Apple ID-Anmeldung zu deaktivieren, müssen Sie zuerst ein lifebox-Passwort festlegen.";
-"apple_login_show_mail_warning" = "";
-"ETK_KVKK_Izin_Politikası" = "";
+"apple_login_show_mail_warning" = "Sie müssen zulassen, dass Ihre E-Mail-Adresse mit lifebox geteilt wird, um sich mit Ihrer Apple ID anzumelden. Bitte klicken Sie auf die Schaltfläche unten, um zur Seite Einstellungen zu gelangen, befolgen Sie die Anweisungen zum Entfernen des Lifebox-Kontos unter Apple-ID > Passwort & Sicherheit > Apps mit Apple-ID und befolgen Sie die Schritte erneut, um sich mit Ihrer Apple-ID anzumelden.";
+"ETK_KVKK_Izin_Politikası" = "Berechtigungsrichtlinie";
