--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2002,18 +2002,15 @@
 "settings_google_apple_empty_mail_error" = "Вы должны добавить адрес электронной почты в свою учетную запись.";
 "password_change_external_auth_required_error" = "Чтобы изменить свой пароль, вы можете либо войти в свою учетную запись lifebox, используя свой идентификатор Google ID/Apple ID, либо следовать инструкциям по забытому паролю на экране входа в систему.";
 "password_change_forgot_password_required_error" = "Чтобы изменить свой пароль, вы должны сначала выйти из своей учетной записи и следовать инструкциям «Забыл Пароль» на экране входа в систему.";
-"kvkk_toggle_desc" = "";
-"kvkk_toggle_text" = "";
+"kvkk_toggle_desc" = "Согласие на Обработку/Обмен Данных";
+"kvkk_toggle_text" = "Настоящим я даю свое согласие на обработку моих личных данных Lifecell Bulut Çözümleri A.Ş. и передачу их сторонам, указанным в %@.";
 "security_popup_warning_header" = "Введена Неверная Информация";
 "security_popup_warning_body1" = "Контрольный вопрос успешно сохранен, произошла следующая ошибка электронного адреса восстановления:";
 "security_popup_warning_body2" = "Электронный адрес для восстановления успешно сохранен, произошла следующая ошибка контрольного вопроса:";
 "security_popup_warning_footer" = "Вы можете повторно ввести свой резервный адрес электронной почты через Настройки -> Данные Учетной Записи -> Мой Профиль.";
 "kvkk_firms_link" = "";
 "kvkk_commercial_info_link" = "";
-"apple_login_user_exists_body" = "";
-"settings_apple_password_required" = "";
-"apple_login_show_mail_warning" = "";
 "apple_login_user_exists_body" = "Имеется учетная запись lifebox, зарегистрированная на адрес электронной почты %@. Для подключения метода «Вход с Apple ID» к существующей учетной записи lifebox, вы должны сначала ввести свой пароль lifebox.";
 "settings_apple_password_required" = "Для отключения входа через Apple ID необходимо установить пароль lifebox.";
-"apple_login_show_mail_warning" = "";
-"ETK_KVKK_Izin_Politikası" = "";
+"apple_login_show_mail_warning" = "Для входа в систему с помощью Apple ID вам необходимо разрешить доступ к вашему адресу электронной почты в lifebox. Нажмите кнопку ниже для перехода на страницу настроек и следуйте инструкциям по удалению учетной записи lifebox в разделе Apple ID > Пароль и Безопасность > Приложения Использующие Apple ID и повторите шаги для повторного входа в систему с помощью вашего Apple ID.";
+"ETK_KVKK_Izin_Politikası" = "Политика Разрешений";
