--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2031,18 +2031,15 @@
 "settings_google_apple_empty_mail_error" = "Duhet të shtoni një adresë emaili në llogarinë tuaj.";
 "password_change_external_auth_required_error" = "Për të ndryshuar fjalëkalimin tuaj, ose mund të identifikoheni në llogarinë tuaj lifebox duke përdorur ID-në tuaj të Google/Apple ID ose të ndiqni udhëzimet e fjalëkalimit të harruar në ekranin e identifikimit.";
 "password_change_forgot_password_required_error" = "Për të ndryshuar fjalëkalimin, fillimisht duhet të dilni nga llogaria juaj dhe të ndiqni udhëzimet \"Harrova Fjalëkalimin\" në ekranin e hyrjes.";
-"kvkk_toggle_desc" = "";
-"kvkk_toggle_text" = "";
+"kvkk_toggle_desc" = "Pëlqimi për Përpunimin/Ndarjen e të Dhënave";
+"kvkk_toggle_text" = "Nëpërmjet kësaj, unë jap pëlqimin tim për të lejuar Lifecell Bulut Çözümleri A.Ş. të përpunojë të dhënat e mia personale dhe t'i ndajë ato me palët e listuara në %@.";
 "security_popup_warning_header" = "Është Futur Një İnformacion İ Pasaktë";
 "security_popup_warning_body1" = "Pyetja e sigurisë është ruajtur me sukses, ka ndodhur gabimi i mëposhtëm për emailin e rikuperimit:";
 "security_popup_warning_body2" = "E-mail-i i rikuperimit u ruajt me sukses, ka ndodhur gabimi i mëposhtëm për pyetjen e sigurisë:";
 "security_popup_warning_footer" = "Mund të rifusni emailin tuaj të rikuperimit përmes Cilësimeve -> Detajet e Llogarisë -> Profili İm.";
 "kvkk_firms_link" = "";
 "kvkk_commercial_info_link" = "";
-"apple_login_user_exists_body" = "";
-"settings_apple_password_required" = "";
-"apple_login_show_mail_warning" = "";
 "apple_login_user_exists_body" = "Gjendet një llogari ekzistuese e regjistruar me %@ e-mail, për të lidhur Apple Login ID me llogarinë tuaj ekzistuese të lifebox, fillimisht duhet të vendosni fjalëkalimin tuaj të lifebox.";
 "settings_apple_password_required" = "Për të çaktivizuar hyrjen në Apple ID, së pari duhet të vendosni një fjalëkalim të lifebox.";
-"apple_login_show_mail_warning" = "";
-"ETK_KVKK_Izin_Politikası" = "";
+"apple_login_show_mail_warning" = "Ju duhet të lejoni që adresa juaj e postës elektronike të ndahet me lifebox në mënyrë që të identifikoheni me Apple ID tuaj. Ju lutemi, klikoni butonin për t'u drejtuar te faqja e cilësimeve, ndiqni udhëzimet për të hequr llogarinë e lifebox nën Apple ID > Fjalëkalimi dhe siguria > Aplikacionet duke përdorur Apple ID dhe ndiqni përsëri hapat për t'u identifikuar me Apple ID.";
+"ETK_KVKK_Izin_Politikası" = "Politika e Lejes";
