--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1990,18 +1990,15 @@
 "settings_google_apple_empty_mail_error" = "Ви повинні додати адресу електронної пошти до свого облікового запису.";
 "password_change_external_auth_required_error" = "Щоб змінити свій пароль, ви можете або увійти до свого облікового запису lifebox, використовуючи свій ідентифікатор Google ID/Apple ID, або дотримуватися вказівок із забутого паролю на екрані входу в систему.";
 "password_change_forgot_password_required_error" = "Щоб змінити свій пароль, ви повинні спочатку вийти зі свого облікового запису та дотримуватися вказівок «Забув Пароль» на екрані входу до системи.";
-"kvkk_toggle_desc" = "";
-"kvkk_toggle_text" = "";
+"kvkk_toggle_desc" = "Згода на Обробку/Спільний Доступ до Даних";
+"kvkk_toggle_text" = "Цим я даю свою згоду дозволити Lifecell Bulut Çözümleri A.Ş. обробляти мої персональні дані та передавати їх сторонам, зазначеним у %@.";
 "security_popup_warning_header" = "Введена Невірна Інформація";
 "security_popup_warning_body1" = "Секретне питання успішно збережено, сталася така помилка для резервної адреси електронної пошти:";
 "security_popup_warning_body2" = "Електронна пошта відновлення успішно збережена, сталася наступна помилка для контрольного питання:";
 "security_popup_warning_footer" = "Ви можете повторно ввести свою резервну адресу електронної пошти через Установки -> Дані Облікового Запису -> Мій Профіль.";
 "kvkk_firms_link" = "";
 "kvkk_commercial_info_link" = "";
-"apple_login_user_exists_body" = "";
-"settings_apple_password_required" = "";
-"apple_login_show_mail_warning" = "";
 "apple_login_user_exists_body" = "Є обліковий запис lifebox, зареєстрований на адресу електронної пошти %@. Для підключення методу Вхід з Apple ID до існуючого облікового запису lifebox, ви повинні спочатку ввести свій пароль lifebox.";
 "settings_apple_password_required" = "Для відключення Входу через Apple ID необхідно встановити пароль lifebox.";
-"apple_login_show_mail_warning" = "";
-"ETK_KVKK_Izin_Politikası" = "";
+"apple_login_show_mail_warning" = "Для входу в систему за допомогою Apple ID вам необхідно дозволити доступ до вашої адреси електронної пошти в lifebox. Натисніть кнопку нижче, щоб перейти на сторінку настройок, і виконайте вказівки щодо видалення облікового запису lifebox у розділі Apple ID > Пароль i Безпека > Програми Використовуючи Apple ID і знову виконайте кроки для повторного входу до системи за допомогою свого Apple ID.";
+"ETK_KVKK_Izin_Politikası" = "Політика Дозволів";
