--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2008,9 +2008,12 @@
 "security_popup_warning_body1" = "Контрольный вопрос успешно сохранен, произошла следующая ошибка электронного адреса восстановления:";
 "security_popup_warning_body2" = "Электронный адрес для восстановления успешно сохранен, произошла следующая ошибка контрольного вопроса:";
 "security_popup_warning_footer" = "Вы можете повторно ввести свой резервный адрес электронной почты через Настройки -> Данные Учетной Записи -> Мой Профиль.";
-"kvkk_firms_link" = "";
-"kvkk_commercial_info_link" = "";
 "apple_login_user_exists_body" = "Имеется учетная запись lifebox, зарегистрированная на адрес электронной почты %@. Для подключения метода «Вход с Apple ID» к существующей учетной записи lifebox, вы должны сначала ввести свой пароль lifebox.";
 "settings_apple_password_required" = "Для отключения входа через Apple ID необходимо установить пароль lifebox.";
 "apple_login_show_mail_warning" = "Для входа в систему с помощью Apple ID вам необходимо разрешить доступ к вашему адресу электронной почты в lifebox. Нажмите кнопку ниже для перехода на страницу настроек и следуйте инструкциям по удалению учетной записи lifebox в разделе Apple ID > Пароль и Безопасность > Приложения Использующие Apple ID и повторите шаги для повторного входа в систему с помощью вашего Apple ID.";
-"ETK_KVKK_Izin_Politikası" = "Политика Разрешений";
+
+/*Fuzzy*/
+"ETK_KVKK_Izin_Politikasi" = "Политика Разрешений";
+"kvkk_firms_link" = "";
+"kvkk_commercial_info_link" = "";
+"ETK_KVKK_Izin_Politikası" = "";
