--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1996,9 +1996,12 @@
 "security_popup_warning_body1" = "Секретне питання успішно збережено, сталася така помилка для резервної адреси електронної пошти:";
 "security_popup_warning_body2" = "Електронна пошта відновлення успішно збережена, сталася наступна помилка для контрольного питання:";
 "security_popup_warning_footer" = "Ви можете повторно ввести свою резервну адресу електронної пошти через Установки -> Дані Облікового Запису -> Мій Профіль.";
-"kvkk_firms_link" = "";
-"kvkk_commercial_info_link" = "";
 "apple_login_user_exists_body" = "Є обліковий запис lifebox, зареєстрований на адресу електронної пошти %@. Для підключення методу Вхід з Apple ID до існуючого облікового запису lifebox, ви повинні спочатку ввести свій пароль lifebox.";
 "settings_apple_password_required" = "Для відключення Входу через Apple ID необхідно встановити пароль lifebox.";
 "apple_login_show_mail_warning" = "Для входу в систему за допомогою Apple ID вам необхідно дозволити доступ до вашої адреси електронної пошти в lifebox. Натисніть кнопку нижче, щоб перейти на сторінку настройок, і виконайте вказівки щодо видалення облікового запису lifebox у розділі Apple ID > Пароль i Безпека > Програми Використовуючи Apple ID і знову виконайте кроки для повторного входу до системи за допомогою свого Apple ID.";
-"ETK_KVKK_Izin_Politikası" = "Політика Дозволів";
+
+/*Fuzzy*/
+"ETK_KVKK_Izin_Politikasi" = "Політика Дозволів";
+"kvkk_firms_link" = "";
+"kvkk_commercial_info_link" = "";
+"ETK_KVKK_Izin_Politikası" = "";
