--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2044,9 +2044,12 @@
 "security_popup_warning_body1" = "The security question is successfully saved, the following error for the recovery e-mail has occurred:";
 "security_popup_warning_body2" = "The recovery e-mail is successfully saved, the following error for the security question has occurred:";
 "security_popup_warning_footer" = "You can re-enter your recovery e-mail via Settings -> Account Details -> My Profile.";
-"kvkk_firms_link" = "";
-"kvkk_commercial_info_link" = "";
 "apple_login_user_exists_body" = "An existing registered account is found with %@ e-mail, to connect Apple Login ID with your existing lifebox account you must first enter your lifebox password.";
 "settings_apple_password_required" = "In order to turn off the Apple ID Login, you must set a lifebox password first.";
 "apple_login_show_mail_warning" = "You need to allow your e-mail address to be shared with lifebox in order to login with your Apple ID. Please click the button below to be directed to Settings page, follow the instructions to remove the lifebox account under Apple ID > Password & Security > Apps Using Apple ID and follow the steps again to login with your Apple ID.";
+
+/*Fuzzy*/
+"ETK_KVKK_Izin_Politikasi" = "Permission Policy";
+"kvkk_firms_link" = "";
+"kvkk_commercial_info_link" = "";
 "ETK_KVKK_Izin_Politikası" = "Permission Policy";
